# tic-tac-toe

./: CMakeLists.txt
include/: game.h  view.h
mytest/include/: mytest.h
mytest/src/: mytest.cpp  mytest_main.cpp
src/: game.cpp  game_test.cpp  main.cpp  view_cli_interactive.cpp  view_cli_loud.cpp  view_cli_silent.cpp  view_common.cpp
